# wagtail-devtools-cli

./: .coveragerc  .env.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yaml
docs/: CONTRIBUTING.md
tests/: conftest.py  test_cli.py  test_conf.py  test_dataclasses.py  test_helpers.py  test_request_handler.py
wagtail_devtools_cli/: cli.py  dataclasses.py  handlers.py  helpers.py
